# goblin-engineer

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
application/: CMakeLists.txt
application/header/application/: abstract_plugin.hpp  application.hpp  context.hpp  forward.hpp  metadata.hpp  pimpl.hpp  plugin.hpp  rpc.hpp
application/source/: abstract_plugin.cpp  application.cpp  plugin.cpp  rpc.cpp
cmake/: clang_tools.cmake
example/: CMakeLists.txt  main.cpp  test_plugin.cpp  test_plugin.hpp
example/plugins/database/: block.hpp  database.cpp  database.hpp  database_wrapper.cpp  database_wrapper.hpp  handler.hpp
example/plugins/database_api/: database_api.cpp  database_api.hpp
examples/base/: CMakeLists.txt  main.cpp  test.http
header/: goblin-engineer.hpp
header/goblin-engineer/: abstract_manager_service.hpp  abstract_plugin.hpp  abstract_service.hpp  application.hpp  configuration.hp  configuration.hpp  constructors.hpp  context.hpp  converters.hpp  data_provider.hpp  dynamic.hpp  dynamic_environment.hpp  forward.hpp  log.hpp  message.hpp  metadata.hpp  plugin.hpp  root_manager.hpp  service.hpp
header/goblin-engineer/components/: network.hpp
header/goblin-engineer/detail/: dynamic.hpp
header/goblin-engineer/dynamic/: dynamic.hpp  object.hpp
shared/: config.yaml
source/: abstract_manager_service.cpp  abstract_plugin.cpp  abstract_service.cpp  application.cpp  context.cpp  data_provider.cpp  dynamic.cpp  dynamic_environment.cpp  message.cpp  network.cpp  plugin.cpp  root_manager.cpp  service.cpp
